codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_shift_and_esc.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                            ! for shell commands                "
"  shift + enter for newline                 tab to submit message               "
"  @ for file paths                          ctrl + v to paste images            "
"  ctrl + shift + c to copy draft            ctrl + g to edit in external editor "
"  esc again to edit previous message        ctrl + r search history             "
"  ctrl + c to exit                          ⌥ + , reasoning down                "
"  ⌥ + . reasoning up                        ctrl + t to view transcript         "
"                                                                                "
"  customize shortcuts with /keymap                                              "
